Fix extra right margin on Mobile.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -250,7 +250,7 @@ footer a {
 
 /* Mobile CSS */
 @media only screen and (max-width: 470px) {
-  .HeaderLogo, .FirstSection img, .SecondSection .LeftColumn, .Desktop, .VerticalListing img, h4, .VerticalListing p, .Theses .RightColumn, .Theses h3, .Theses p, footer a {
+  .HeaderLogo, /*.FirstSection img,*/ .SecondSection .LeftColumn, .Desktop, .VerticalListing img, h4, .VerticalListing p, .Theses .RightColumn, .Theses h3, .Theses p, footer a {
     display: none;
   }
 
@@ -271,16 +271,25 @@ footer a {
     /* Not totally sure why wrap-reverse helps center things here */
   }
 
+/* to override the 60% width at Desktop
   .LeftColumn, .RightColumn {
     width: 100%;
-    /* to override the 60% width at Desktop */
+  }
+*/
+
+  .LeftColumn {
+    width: 100%;
+    padding: 0px;
   }
 
-  .RightColumn {
+  .FirstSection .RightColumn {
+    /*width: 100%;*/
     align-items: center;
+    padding: 2rem 0rem 0rem 0rem;
     /* to center the Start Here button */
   }
 
+/* Trying to set the image as a normal image instead of BG image
   .FirstSection .LeftColumn {
     background-image: url("../images/banner.jpg");
     background-position: top;
@@ -288,10 +297,16 @@ footer a {
     background-repeat: no-repeat;
     height: 180px;
   }
+*/
 
-  .FirstSection .RightColumn h1, .FirstSection .RightColumn h3 {
-    padding: 1rem 2rem;
+  .FirstSection .RightColumn h1 {
+    padding-bottom: 2rem
   }
+
+/*
+  .FirstSection .RightColumn h3 {
+    padding-bottom: 1.5rem;
+  }*/
 
   .button {
     margin-bottom: 1rem;
